# openca-base

./: ChangeLog  I18N  INSTALL  INSTALL.SOLARIS  INSTALL.UBUNTU  LICENSE  Makefile  Makefile.devel  Makefile.global-vars  Makefile.global-vars.in  NOTES.Chain  README  RELEASE-NOTES  STATUS  THANKS  aclocal.m4  configure  configure.ac  libtool  relative_ln_s.sh  relative_ln_s.sh.in
configs/: configure.pkg.ca_FC4
configs/examples/: configure.default  configure.fedora_ca  configure.fedora_ra  configure.madwolf  configure.michael  configure.michael_solaris  configure.openca  configure.redhat  configure.redhat_ca_rpm  configure.redhat_ra_rpm  configure.redhat_rpm  configure.suse  configure.suse_ca_rpm  configure.suse_ra_rpm  configure.suse_rpm
contrib/: OpenCA.spec  OpenCA.spec.orig  access-control-with-ldap.xml  build-dist.sh  build-snap.sh
contrib/apache/: CA  RAServer  README  ca.conf.example  common.conf.in  httpd.conf.example  offline.conf.in  online.conf.in  raserver.conf.example
contrib/install-builder/: openca-base.xml  openca-base.xml.in
contrib/install-builder/openca/: batch.xml  batch.xml.in  ca.xml  ca.xml.in  common.xml  common.xml.in  ldap.xml  ldap.xml.in  node.xml  node.xml.in  openssl.xml  openssl.xml.in  pub.xml  pub.xml.in  ra.xml  ra.xml.in  scep.xml  scep.xml.in  share.xml  share.xml.in
contrib/openldap/: generatedb  openca.ldif  openca.schema  slapd.conf
contrib/openssl/: openssl.cnf
docs/: CHANGES_1.0.2  HISTORY  Makefile
docs/man3/: base.3  base.3.pod
src/: Makefile
src/common/: Makefile
src/common/etc/: .#common.conf.template.1.7  Makefile  auth_browser_req.xml.template  backup.xml.template  browser_req.xml.template  common.conf.template  common.conf.template.in  config.xml.in  configure_etc.sh.in  datasources.xml.template  ldap.xml.template  loa.xml.in  log.xml.in  openca  openca.in  openca_start.template.in  openca_stop.template.in  server_req.xml.template  token.xml.in  utf8_latin1_selector.sh.template.in
src/common/etc/agreements/: Makefile  general.html  low.html
src/common/etc/bp/: Makefile  bp.xml.in  functions.txt  states.txt
src/common/etc/database/: DBI.conf.template  Makefile
src/common/etc/includes/: Makefile  home_body.inc  home_body.inc.de_DE.old  home_body.inc.es_ES  home_body.inc.it_IT  home_body.inc.pl_PL  home_body.inc.ro_RO
src/common/etc/openssl/: Makefile  openssl.cnf.in  sample-openssl.conf.in  sample-openssl.ext.in
src/common/etc/rbac/: Makefile  acl.xml  modules.xml  roles.xml
src/common/lib/: Makefile
src/common/lib/bp/: Makefile  backup_key.sub  check_csr.sub  check_csr_params.sub  check_key.sub  check_key_params.sub  check_pin.sub  complete_csr.sub  create_cert.sub  create_csr.sub  create_key.sub  create_pin.sub  enroll_pin.sub  (+1 more)
src/common/var/: Makefile
src/ext-modules/: Makefile
src/modules/: Makefile
src/modules/openca-ac/: Changes  LICENSE  MANIFEST  Makefile.PL  Makefile.old  README
src/modules/openca-configuration/: Changes  Configuration.pm  LICENSE  MANIFEST  Makefile.PL  Makefile.old  README  test.pl
src/modules/openca-crl/: CRL.pm  Changes  LICENSE  MANIFEST  Makefile.PL  Makefile.old  prova.pl  test.pl
src/modules/openca-crypto/: Changes  Crypto.pod  LICENSE  MANIFEST  Makefile.PL  Makefile.old  README
src/modules/openca-dbi/: Changes  DBI.pm  DBI.pm.patched  DBI.pod  LICENSE  MANIFEST  Makefile.PL  Makefile.old  README  log.err  openca-base-1.3.0-dbichkinput-1.patch  openca-base-1.3.0-dbileak1-1.patch
src/modules/openca-ldap/: Changes  LICENSE  MANIFEST  Makefile.PL  Makefile.old
src/modules/openca-log/: Changes  LICENSE  Log.pm  Log.pod  MANIFEST  Makefile.PL  Makefile.old  README
src/modules/openca-openssl/: Changes  LICENSE  MANIFEST  Makefile.PL  Makefile.old  OpenSSL.c  OpenSSL.pod  OpenSSL.xs  const-c.inc  const-xs.inc  log.err  ppport.h  t3_20.new  test.pl  typemap
src/modules/openca-pkcs7/: Changes  MANIFEST  Makefile.PL  Makefile.old  PKCS7.pod  test.pl
src/modules/openca-req/: Changes  LICENSE  MANIFEST  Makefile.PL  Makefile.old  REQ.pod  prova.pl  spkac.req  test.pl
src/modules/openca-session/: Changes  MANIFEST  Makefile.PL  Makefile.old  README  Session.pm  Session.pod
src/modules/openca-statemachine/: Changes  LICENSE  MANIFEST  MODEL  Makefile.PL  Makefile.old  README
src/modules/openca-tools/: Changes  MANIFEST  Makefile.PL  Makefile.old  test.pl
src/modules/openca-tristatecgi/: Changes  LICENSE  MANIFEST  Makefile.PL  Makefile.old  README  test.pl
src/modules/openca-ui-html/: Changes  HTML.pm  LICENSE  MANIFEST  Makefile.PL  Makefile.old
src/modules/openca-user/: Changes  LICENSE  MANIFEST  Makefile.PL  Makefile.old  log.err
src/modules/openca-x509/: Changes  LICENSE  MANIFEST  Makefile.PL  Makefile.old  test.pl
src/modules/openca-xml-cache/: Changes  LICENSE  MANIFEST  Makefile.PL  Makefile.old  README
src/scripts/: Makefile  modver.in  openca-addcert.in  openca-addreq.in  openca-backup.in  openca-browserexp.in  openca-configure.in  openca-dbbuild.in  openca-dbcreate.in  openca-dblist.in  openca-dbview.in  openca-digest.in  openca-getcert.in  openca-getitem.in  openca-importcerts.in  openca-importreqs.in  openca-menu-translate.in  openca-newcert.in  openca-setpasswd.in  openca-unrevoke.in  openca-useradmin  openca-useradmin.in  openssl-setopt.in
src/web-interfaces/: Makefile
src/web-interfaces/batch/: Makefile  access_control.xml.in  batch-menu.xml  batch-menu.xml.in  batch.conf.in  batch.in
src/web-interfaces/ca/: Makefile  access_control.xml.in  ca-menu.xml  ca-menu.xml.in  ca.conf.in  ca.in
src/web-interfaces/ldap/: Makefile  access_control.xml.in  ldap-menu.xml  ldap-menu.xml.in  ldap.conf.in  ldap.in
src/web-interfaces/node/: Makefile  access_control.xml.in  node-menu.xml  node-menu.xml.in  node.conf.in  node.in
src/web-interfaces/pub/: Makefile  access_control.xml.in  pki.in  pub-menu.xml  pub-menu.xml.in  pub.conf.in
src/web-interfaces/ra/: Makefile  RAServer.in  access_control.xml.in  ra-menu.xml  ra-menu.xml.in  ra.conf.in
src/web-interfaces/scep/: Makefile  access_control.xml.in  scep.conf.in  scep.in
(+650 files in other folders)
